schema/testdata/errors/operation_create_missing_inputs.keel
model Person {
    fields {
        name Text
        age Number
        notRequired Text?
    }

    actions {
        //expect-error:16:28:E034:required field 'age' must be set by a non-optional input, a @set expression or with @default
        create createPerson() with (name)
    }
}
